exports[`test should render a default component 1`] = `
<header
  class="header">
  <div
    class="flexContainer" />
</header>
`;

exports[`test should render a header with all content 1`] = `
<header
  class="header">
  <div
    class="flexContainer">
    <div
      class="flexEnd">
      <div>
        start content
      </div>
    </div>
    <div
      class="flexFill">
      <div
        class="titleContainer">
        <h1
          class="title">
          Title
        </h1>
      </div>
    </div>
    <div
      class="flexEnd">
      <div>
        end content
      </div>
    </div>
  </div>
</header>
`;

exports[`test should render a header with content on the left 1`] = `
<header
  class="header">
  <div
    class="flexContainer">
    <div
      class="flexEnd">
      <div>
        start content
      </div>
    </div>
  </div>
</header>
`;

exports[`test should render a header with content on the right 1`] = `
<header
  class="header">
  <div
    class="flexContainer">
    <div
      class="flexEnd">
      <div>
        end content
      </div>
    </div>
  </div>
</header>
`;

exports[`test should render a header with title only 1`] = `
<header
  class="header">
  <div
    class="flexContainer">
    <div
      class="flexFill">
      <div
        class="titleContainer">
        <h1
          class="title">
          title
        </h1>
      </div>
    </div>
  </div>
</header>
`;
